css elements overflow fixed

--- a/Website/searching.css
+++ b/Website/searching.css
@@ -1,8 +1,7 @@
 html,body {
     margin:0;
     padding:0;
-    overflow-x:hidden;
-    
+    overflow: hidden;
   }
   
   .nav{
